--- a/assets/stylesheets/common/_for-profit-student-debt-collective.scss
+++ b/assets/stylesheets/common/_for-profit-student-debt-collective.scss
@@ -1,6 +1,6 @@
 .category-for-profit-colleges-collective {
   .category-icon {
-    background-image: url("http://localhost:8080/for-profit-colleges-collective-icon@2x.png");
+    background-image: url('/plugins/discourse-theme/images/for-profit-colleges-collective-icon@2x.png');
     height: 95px;
     width: 75px;
     display: block;
