--- a/assets/stylesheets/common/bootstrap.scss
+++ b/assets/stylesheets/common/bootstrap.scss
@@ -78,8 +78,13 @@ body {
   line-height: 1.5;
   color: #2b2b2b;
   text-align: left;
-  background: center/20% url("/noisy-texture-300x300-o6-d18-c-FCFAF2-t1@2x.png"), linear-gradient(#dbf8ff, #fffdf2 25%);
+  background: $bg-tan url("https://s3.amazonaws.com/tds-static/img/debtcollective/0.0.1/bg-tile.png");
   background-repeat: repeat;
+  background-size: 20%;
+}
+
+#main {
+  background: linear-gradient($bg-blue, rgba(245, 245, 245, 0) 1000px);
 }
 
 [tabindex="-1"]:focus {
