showing custom links in the header and inside the hamburger menu

--- a/assets/stylesheets/_components--navigation.scss
+++ b/assets/stylesheets/_components--navigation.scss
@@ -5,6 +5,7 @@ $navigation-height: 70px;
   background-color: color("bg-tan");
   border-bottom: 1px solid color("gray-3");
   box-shadow: none;
+  padding-top: 0;
 
   #site-logo {
     max-height: 52px;
