--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -23,3 +23,4 @@
 @import "components--topic-list";
 @import "components--topic";
 @import "components--navigation";
+@import "components--header-link";
