adding eof new line

--- a/assets/stylesheets/_components--header-link.scss
+++ b/assets/stylesheets/_components--header-link.scss
@@ -18,7 +18,7 @@ li.header-link {
   }
 }
 
-.d-header { 
+.d-header {
   .header-buttons,
   .title {
     display: flex;
@@ -28,5 +28,5 @@ li.header-link {
 
 .desktop-view .vmo,
 .mobile-view .vdo {
-  display: none !important
+  display: none !important;
 }
