--- a/assets/stylesheets/_layouts--body.scss
+++ b/assets/stylesheets/_layouts--body.scss
@@ -1,4 +1,3 @@
 body {
-  background: url("/plugins/discourse-debtcollective-theme/images/noisy-texture-300x300.png"),
-    linear-gradient(color("bg-blue"), color("bg-tan") 25%);
+  background: linear-gradient(color("bg-blue"), color("bg-tan") 25%);
 }
