--- a/assets/stylesheets/_components--header-link.scss
+++ b/assets/stylesheets/_components--header-link.scss
@@ -1,6 +1,5 @@
 li.header-link {
   float: left;
-  margin-right: 5px;
   list-style: none;
 
   a {
@@ -9,11 +8,11 @@ li.header-link {
     font-size: $font-up-1;
     font-weight: 600;
     line-height: $line-height-medium;
-    padding: 10px 17px;
+    padding: 0px 10px;
+    transition: $transition;
 
     &:hover {
-      border-radius: 4px;
-      border: 1px solid color("gray-3");
+      color: color("gray-2");
     }
   }
 }
