--- a/assets/stylesheets/_components--navigation.scss
+++ b/assets/stylesheets/_components--navigation.scss
@@ -1,4 +1,4 @@
-$navigation-height: 70px;
+$navigation-height: 72px;
 
 .d-header {
   height: $navigation-height;
@@ -6,9 +6,10 @@ $navigation-height: 70px;
   border-bottom: 1px solid color("gray-3");
   box-shadow: none;
   padding-top: 0;
+  box-sizing: border-box;
 
   #site-logo {
-    max-height: 52px;
+    max-height: 54px;
     height: auto;
   }
 
@@ -20,7 +21,37 @@ $navigation-height: 70px;
 
   .header-buttons {
     .btn {
-      padding: 8px 12px;
+      padding: 0 10px;
+    }
+  }
+
+  // header icons to look like our header links
+  .header-dropdown-toggle {
+    .icon {
+      color: color("gray-0");
+      transition: $transition;
+
+      &:hover,
+      &:focus {
+        color: color("gray-2");
+        background-color: transparent;
+        border-top: 1px solid transparent;
+        border-left: 1px solid transparent;
+        border-right: 1px solid transparent;
+      }
+    }
+
+    &.active {
+      .icon {
+        &:hover,
+        &:focus {
+          color: color("gray-2");
+          background-color: white;
+          border-top: 1px solid #e9e9e9;
+          border-left: 1px solid #e9e9e9;
+          border-right: 1px solid #e9e9e9;
+        }
+      }
     }
   }
 }
