fix(add height to form to make user fields display better):

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -24,3 +24,4 @@
 @import "components--topic";
 @import "components--navigation";
 @import "components--header-link";
+@import "components--signup-form";
