--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -25,3 +25,4 @@
 @import "components--navigation";
 @import "components--header-link";
 @import "components--signup-form";
+@import "components--modal";
