feat(categories-only): allow to render categories as column of cards
re https://github.com/debtcollective/community/issues/28

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,10 +6,11 @@ $green: #d6ffb8;
 $purple: #dac4f5;
 $red: #ff4630;
 $yellow: #ffed9c;
+$white: #ffffff;
 
 // Custom
-$font-family-sans-serif: "Libre Franklin", sans-serif;
-$font-family-monospace: "More Gothic Bold", Impact, sans-serif;
+$dc-font-family-sans-serif: "Libre Franklin", sans-serif;
+$dc-font-family-monospace: "More Gothic Bold", Impact, sans-serif;
 
-$body-bg: $beige;
-$primary: $red;
+$dc-body-bg: $beige;
+$dc-primary: $red;
