--- a/common/common.scss
+++ b/common/common.scss
@@ -2,3 +2,9 @@
 @import url("https://s3.amazonaws.com/tds-static/fonts/moregothic/1.0.0/More+Gothic+Bold.css");
 
 @import "variables";
+@import "common/foundation/variables";
+
+@import "layout";
+@import "type";
+
+@import "templates/components/categories-only";
