--- a/javascripts/discourse/templates/components/categories-only.hbs
+++ b/javascripts/discourse/templates/components/categories-only.hbs
@@ -1,89 +1,16 @@
-CATEGORIES-ONLY
+{{!-- https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/categories-only.hbs --}}
 {{#if categories}}
-<h2 class="font-monospace">{{theme-i18n "dc.categories.collectives"}}</h2>
-<table class="category-list {{if showTopics 'with-topics'}}">
-  <thead>
-    <tr>
-      <th class="category"><span aria-role="heading" aria-level="2"
-          id="categories-only-category">{{i18n 'categories.category'}}</span></th>
-      <th class="topics">{{i18n 'categories.topics'}}</th>
-      {{#if showTopics}}
-      <th class="latest">{{i18n 'categories.latest'}}</th>
-      {{/if}}
-    </tr>
-  </thead>
-  <tbody aria-labelledby="categories-only-category">
-    {{#each categories as |c|}}
-    <tr data-category-id={{c.id}}
-      class="{{if c.description_excerpt 'has-description' 'no-description'}} {{if c.uploaded_logo.url 'has-logo' 'no-logo'}}">
-      <td class="category" style={{border-color c.color}}>
-        {{category-title-link category=c}}
-        {{#if c.description_excerpt}}
-        <div class="category-description">
-          {{{dir-span c.description_excerpt}}}
-        </div>
-        {{/if}}
-        {{#if c.isGrandParent}}
-        <table class="category-list subcategories-with-subcategories">
-          {{#each c.subcategories as |subcategory|}}
-          <tr data-category-id={{subcategory.id}}
-            class="{{if subcategory.description_excerpt 'has-description' 'no-description'}} {{if subcategory.uploaded_logo.url 'has-logo' 'no-logo'}}">
-            <td class="category" style={{border-color subcategory.color}}>
-              {{category-title-link tagName="h4" category=subcategory}}
-              {{#if subcategory.description_excerpt}}
-              <div class="category-description subcategory-description">
-                {{{dir-span subcategory.description_excerpt}}}
-              </div>
-              {{/if}}
-              {{#if subcategory.subcategories}}
-              <div class='subcategories'>
-                {{#each subcategory.subcategories as |subsubcategory|}}
-                {{#unless subsubcategory.isMuted}}
-                <span class='subcategory'>
-                  {{category-title-before category=subsubcategory}}
-                  {{category-link subsubcategory hideParent="true"}}
-                </span>
-                {{/unless}}
-                {{/each}}
-              </div>
-              {{else}}
-              {{#if subcategory.description_excerpt}}
-              <div class="category-description subcategory-description">
-                {{{dir-span subcategory.description_excerpt}}}
-              </div>
-              {{/if}}
-              {{/if}}
-            </td>
-          </tr>
-          {{/each}}
-        </table>
-        {{else if c.subcategories}}
-        <div class='subcategories'>
-          {{#each c.subcategories as |subcategory|}}
-          {{#unless subcategory.isMuted}}
-          <span class='subcategory'>
-            {{category-title-before category=subcategory}}
-            {{category-link subcategory hideParent="true"}}
-            {{category-unread category=subcategory}}
-          </span>
-          {{/unless}}
-          {{/each}}
-        </div>
-        {{/if}}
-      </td>
-      <td class="topics">
-        <div title={{c.statTitle}}>{{{c.stat}}}</div>
-        {{category-unread category=c tagName="div" class="unread-new"}}
-      </td>
-      {{#if showTopics}}
-      <td class="latest">
-        {{#each c.featuredTopics as |t|}}
-        {{featured-topic topic=t latestTopicOnly=latestTopicOnly}}
-        {{/each}}
-      </td>
-      {{/if}}
-    </tr>
-    {{/each}}
-  </tbody>
-</table>
+<h2 class="dc-heading">{{theme-i18n "dc.categories.collectives"}}</h2>
+{{#each categories as |c|}}
+<div class="dc-category dc-card">
+  <div class="dc-category__title">
+    {{category-title-link category=c}}
+  </div>
+  <div class="dc-category__description">
+    {{#if c.description_excerpt}}
+    {{{dir-span c.description_excerpt}}}
+    {{/if}}
+  </div>
+</div>
+{{/each}}
 {{/if}}
