refactor(card): use isolated file to handle card styles

--- a/scss/templates/components/categories-only.scss
+++ b/scss/templates/components/categories-only.scss
@@ -1,26 +1,1 @@
-.dc-category {
-  background: $white;
-  border-top: 0.25rem solid $dc-primary;
-  padding: 1.5rem;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.12),
-    0 0.0625rem 0.125rem rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-
-  &:hover {
-    box-shadow: 0 0.875rem 1.75rem rgba(0, 0, 0, 0.25),
-      0 0.625rem 0.625rem rgba(0, 0, 0, 0.22);
-  }
-
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-size: 1.5rem;
-
-    a {
-      color: $primary;
-      text-transform: capitalize;
-    }
-  }
-}
+// specific to this view only
