--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,18 +1,12 @@
 .dc-card {
-  background: $white;
   border-top: 0.25rem solid $dc-primary;
-  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.12),
-    0 0.0625rem 0.125rem rgba(0, 0, 0, 0.24);
+  background: #fbfbfb;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   margin-bottom: 1.5rem;
   padding: 1.5rem;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-
-  &:hover {
-    box-shadow: 0 0.875rem 1.75rem rgba(0, 0, 0, 0.25),
-      0 0.625rem 0.625rem rgba(0, 0, 0, 0.22);
-  }
 
   &__title {
     color: $primary;
