feat(categories-only): add border as attribute for categories cards
remove the border color from belong to general cards and instead apply it only for cards within
categories-only template using the category color

re https://github.com/debtcollective/community/issues/28

--- a/javascripts/discourse/templates/components/categories-only.hbs
+++ b/javascripts/discourse/templates/components/categories-only.hbs
@@ -5,7 +5,7 @@
   <div class="dc-row">
     {{#each categories as |c|}}
     <div class="dc-col-sm-6">
-      <a class="dc-category dc-card" href={{c.url}}>
+      <a class="dc-category dc-card" href={{c.url}} style="border-top-color: #{{c.color}};">
         <div class="dc-category__title dc-card__title">
           {{c.name}}
         </div>
