--- a/javascripts/discourse/templates/components/categories-only.hbs
+++ b/javascripts/discourse/templates/components/categories-only.hbs
@@ -4,6 +4,7 @@
   <h2 class="dc-heading">{{theme-i18n "dc.categories.collectives"}}</h2>
   <div class="dc-row">
     {{#each categories as |c|}}
+    {{#if c.is_collective}}
     <div class="dc-col-sm-6">
       <a class="dc-category dc-card" href={{c.url}} style="border-top-color: #{{c.color}};">
         <div class="dc-category__title dc-card__title">
@@ -16,6 +17,30 @@
         </div>
       </a>
     </div>
+    {{/if}}
+    {{/each}}
+  </div>
+</div>
+{{/if}}
+{{#if categories}}
+<div class="dc-categories-container">
+  <h2 class="dc-heading">{{theme-i18n "dc.categories.others"}}</h2>
+  <div class="dc-row">
+    {{#each categories as |c|}}
+    {{#unless c.is_collective}}
+    <div class="dc-col-sm-6">
+      <a class="dc-category dc-card" href={{c.url}} style="border-top-color: #{{c.color}};">
+        <div class="dc-category__title dc-card__title">
+          {{c.name}}
+        </div>
+        <div class="dc-category__description dc-card__text">
+          {{#if c.description_excerpt}}
+          {{{dir-span c.description_excerpt}}}
+          {{/if}}
+        </div>
+      </a>
+    </div>
+    {{/unless}}
     {{/each}}
   </div>
 </div>
