--- a/javascripts/discourse/templates/components/categories-only.hbs
+++ b/javascripts/discourse/templates/components/categories-only.hbs
@@ -1,4 +1,5 @@
 {{!-- https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/categories-only.hbs --}}
+{{!-- TODO: https://github.com/debtcollective/community/issues/32 --}}
 {{#if categories}}
 <div class="dc-categories-container">
   <h2 class="dc-heading">{{theme-i18n "dc.categories.collectives"}}</h2>
