refactor(categories-only): use a custom component to host template

--- a/javascripts/discourse/templates/mobile/components/categories-only.hbs
+++ b/javascripts/discourse/templates/mobile/components/categories-only.hbs
@@ -1,48 +1,1 @@
-{{!-- https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/mobile/components/categories-only.hbs --}}
-{{!-- TODO: https://github.com/debtcollective/community/issues/32 --}}
-{{#if categories}}
-<div class="dc-categories-container">
-  <h2 class="dc-heading">{{theme-i18n "dc.categories.collectives"}}</h2>
-  <div class="dc-row">
-    {{#each categories as |c|}}
-    {{#if c.is_collective}}
-    <div class="dc-col-sm-6">
-      <a class="dc-category dc-card" href={{c.url}} style="border-top-color: #{{c.color}};">
-        <div class="dc-category__title dc-card__title">
-          {{c.name}}
-        </div>
-        <div class="dc-category__description dc-card__text">
-          {{#if c.description_excerpt}}
-          {{{dir-span c.description_excerpt}}}
-          {{/if}}
-        </div>
-      </a>
-    </div>
-    {{/if}}
-    {{/each}}
-  </div>
-</div>
-{{/if}}
-{{#if categories}}
-<div class="dc-categories-container">
-  <h2 class="dc-heading">{{theme-i18n "dc.categories.others"}}</h2>
-  <div class="dc-row">
-    {{#each categories as |c|}}
-    {{#unless c.is_collective}}
-    <div class="dc-col-sm-6">
-      <a class="dc-category dc-card" href={{c.url}} style="border-top-color: #{{c.color}};">
-        <div class="dc-category__title dc-card__title">
-          {{c.name}}
-        </div>
-        <div class="dc-category__description dc-card__text">
-          {{#if c.description_excerpt}}
-          {{{dir-span c.description_excerpt}}}
-          {{/if}}
-        </div>
-      </a>
-    </div>
-    {{/unless}}
-    {{/each}}
-  </div>
-</div>
-{{/if}}
+{{dc-categories-only categories=categories}}
