--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Libre+Franklin:400,600");
+@import url("https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600");
 @import url("https://s3.amazonaws.com/tds-static/fonts/moregothic/1.0.0/More+Gothic+Bold.css");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @import "bootstrap/bootstrap-grid";
 @import "variables";
