feat(categories-only): cap description to three lines

--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -11,7 +11,7 @@
           <h2 class="dc-category__title dc-card__title">
             {{c.name}}
           </h2>
-          <div class="dc-category__description dc-card__text">
+          <div class="dc-category__description dc-card__text dc-clamp-3">
             {{#if c.description_excerpt}}
             {{{dir-span c.description_excerpt}}}
             {{/if}}
@@ -40,7 +40,7 @@
           <h2 class="dc-category__title dc-card__title">
             {{c.name}}
           </h2>
-          <div class="dc-category__description dc-card__text">
+          <div class="dc-category__description dc-card__text dc-clamp-3">
             {{#if c.description_excerpt}}
             {{{dir-span c.description_excerpt}}}
             {{/if}}
