--- a/scss/card.scss
+++ b/scss/card.scss
@@ -2,6 +2,8 @@
   background: #fbfbfb;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   display: flex;
+  height: $dc-card-height;
+  justify-content: space-between;
   flex-direction: column;
   margin-bottom: 1.5rem;
   padding: 1.5rem;
@@ -12,29 +14,19 @@
   &__title {
     color: $primary;
     text-transform: capitalize;
-    font-size: 1.5rem;
+    font-size: $dc-font-size-lg;
     font-weight: 600;
     margin-top: 0;
   }
 
   &__text {
+    @include dc-text-light($dc-font-size-sm);
+  }
+
+  &__meta {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     color: $primary;
   }
-}
-
-.dc-category {
-  height: 12em;
-  justify-content: space-between;
-}
-
-.dc-category__description {
-  font-weight: 300;
-  font-size: 0.875rem;
-}
-
-.dc-category__meta {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  color: $primary !important;
 }
