--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,8 +12,16 @@ $white: #ffffff;
 $dc-font-family-sans-serif: "Libre Franklin", sans-serif;
 $dc-font-family-monospace: "More Gothic Bold", Impact, sans-serif;
 
+$dc-font-size-base: 1rem;
+$dc-font-size-lg: $font-size-base * 1.5;
+$dc-font-size-sm: $font-size-base * 0.875;
+$dc-font-weight-light: 300;
+$dc-font-weight-normal: 400;
+$dc-font-weight-bold: 600;
+
 $dc-body-bg: $beige;
 $dc-primary: $red;
+$dc-card-height: 14rem;
 
 // Foundation customisation
 
