--- a/scss/templates/components/categories-only.scss
+++ b/scss/templates/components/categories-only.scss
@@ -1,5 +1,1 @@
-.dc-categories-container {
-  .dc-card {
-    border-top: 0.25rem solid $dc-primary;
-  }
-}
+// All styles only for categories-only template
