--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,6 +1,7 @@
 .dc-card {
   background: #fbfbfb;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-top: 0.25rem solid transparent;
   display: flex;
   height: $dc-card-height;
   justify-content: space-between;
