fix(scss): remove wrong " from mixin default value

--- a/scss/type.scss
+++ b/scss/type.scss
@@ -6,7 +6,7 @@ body {
   font-size: 2rem;
 }
 
-@mixin dc-text-light($size: "inherit") {
+@mixin dc-text-light($size: inherit) {
   color: $primary;
   font-weight: 300;
   font-size: $size;
