feat(topic-list): add date and pinned metadata to list items
re https://github.com/debtcollective/community/issues/29

--- a/common/common.scss
+++ b/common/common.scss
@@ -9,6 +9,7 @@
 @import "layout";
 @import "type";
 @import "card";
+@import "pill";
 
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
