feat(topic-list): include author picture
besides, improve semantics of the topic-list-item card

re https://github.com/debtcollective/community/issues/29

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,3 +13,5 @@
 
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
+
+@import "templates/list/topic-author";
