--- a/scss/card.scss
+++ b/scss/card.scss
@@ -7,7 +7,8 @@
   justify-content: space-between;
   flex-direction: column;
   margin-bottom: 1.5rem;
-  padding: 1rem;
+  padding: 1rem 0;
+  @include make-container;
 
   &,
   &:visited,
