--- a/javascripts/discourse/templates/list/topic-list-item.raw.hbs
+++ b/javascripts/discourse/templates/list/topic-list-item.raw.hbs
@@ -20,11 +20,13 @@
       </div>
     </div>
   </header>
+  {{#if topic.hasExcerpt}}
   <div class="dc-card__content">
     <div class="dc-card__text dc-clamp-3">
-      {{raw "list/topic-excerpt" topic=topic}}
+      {{{dir-span topic.escapedExcerpt}}}
     </div>
   </div>
+  {{/if}}
   <footer class="dc-card__meta">
     <span class="material-icons">comment</span>
     <p class="m-0 ml-1 dc-text-light">{{topic.replyCount}}</p>
