refactor(templates): use preffix "dc-" on topic-author
The idea is to help to identify what is custom component/template and what is not

--- a/javascripts/discourse/templates/list/topic-list-item.raw.hbs
+++ b/javascripts/discourse/templates/list/topic-list-item.raw.hbs
@@ -2,7 +2,7 @@
 <a class="dc-topic dc-card" href={{topic.lastUnreadUrl}} style="border-top-color: #{{topic.category.color}};">
   <header class="dc-card__header">
     <div class="mr-2">
-      {{raw "list/topic-author" posters=topic.featuredUsers}}
+      {{raw "list/dc-topic-author" posters=topic.featuredUsers}}
     </div>
     <div>
       <h2 class="dc-card__title">
