feat(show-more): add component to handle expanded content
this component has a template that cacn be used to simulate collapsing/expanded content

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,7 @@
 
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
+@import "templates/components/dc-show-more";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
