--- a/scss/card.scss
+++ b/scss/card.scss
@@ -3,7 +3,7 @@
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-top: 0.25rem solid transparent;
   display: flex;
-  height: $dc-card-height;
+  height: $card-height;
   justify-content: space-between;
   flex-direction: column;
   margin-bottom: 1.5rem;
@@ -27,7 +27,7 @@
   &__title {
     color: $primary;
     text-transform: capitalize;
-    font-size: $dc-font-size-lg;
+    font-size: $font-size-lg;
     font-weight: 600;
     margin-top: 0;
     margin-bottom: 0.625rem;
@@ -38,7 +38,7 @@
   }
 
   &__text {
-    @include dc-text-light($dc-font-size-sm);
+    @include dc-text-light($font-size-sm);
   }
 
   &__content {
