--- a/scss/type.scss
+++ b/scss/type.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: $dc-font-family-sans-serif;
+  font-family: $font-family-sans-serif;
 }
 
 .dc-heading {
@@ -17,5 +17,5 @@ body {
 }
 
 .dc-text-small {
-  font-size: $dc-font-size-sm;
+  font-size: $font-size-sm;
 }
