feat(show-more): add aesthetics to the button

--- a/common/common.scss
+++ b/common/common.scss
@@ -6,6 +6,8 @@
 @import "bootstrap/bootstrap-grid";
 @import "functions";
 
+@import "common/components/buttons";
+@import "button";
 @import "layout";
 @import "type";
 @import "card";
