--- a/javascripts/discourse/templates/components/dc-show-more.hbs
+++ b/javascripts/discourse/templates/components/dc-show-more.hbs
@@ -1,4 +1,4 @@
 {{yield}}
-<button class="dc-btn dc-btn-dark dc-btn-block dc-btn-lg" {{on "click" this.toggleExpanded}}>
+<button class="btn-show-more" {{on "click" this.toggleExpanded}}>
   {{displayText}}
 </button>
