refactor(scss): use bootstrap colours definition
Avoid to include foundation files in order to do not alterate their output, besides, we use the mental pattern of bootstrap to distrib ute colours (primary doesn't belong to the text color but instead body-color)

--- a/scss/card.scss
+++ b/scss/card.scss
@@ -14,7 +14,7 @@
   &:hover,
   &:visited,
   &:active {
-    color: $primary;
+    color: $body-color;
   }
 
   &__header {
@@ -25,7 +25,7 @@
   // to being able to overwrite #list-area h2 rule
   #list-area &__title,
   &__title {
-    color: $primary;
+    color: $body-color;
     text-transform: capitalize;
     font-size: $font-size-lg;
     font-weight: 600;
