--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,12 +1,13 @@
-// https://github.com/discourse/discourse/blob/master/app/assets/stylesheets/common/components/buttons.scss
+@import "discourse/button";
 
 .btn-dark {
   @include btn(
-    $text-color: $secondary,
-    $bg-color: lighten($primary, 10%),
-    $icon-color: $secondary,
-    $hover-bg-color: lighten($primary, 20%),
-    $hover-icon-color: $secondary
+    $text-color: $white,
+    $bg-color: $dark,
+    $icon-color: $white,
+    $hover-text-color: $white,
+    $hover-bg-color: lighten($dark, 10%),
+    $hover-icon-color: $white
   );
   border-radius: $border-radius;
 }
