--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -32,8 +32,18 @@ $container-max-widths: (
 $grid-gutter-width: 30px;
 $container-padding-x: $grid-gutter-width / 2;
 
+$body-color: $gray;
 $body-bg: $beige;
-$primary: $gray;
+
+$primary: $red;
+$secondary: $green;
+$success: #28a745;
+$info: #17a2b8;
+$warning: #ffc107;
+$danger: #dc3545;
+$light: #f8f9fa;
+$dark: #3c3c3c;
+
 $card-height: 14rem;
 
 /*
