--- a/javascripts/discourse/templates/components/dc-show-more.hbs
+++ b/javascripts/discourse/templates/components/dc-show-more.hbs
@@ -1,4 +1,6 @@
 {{yield}}
-<button class="btn-show-more" {{on "click" this.toggleExpanded}}>
-  {{displayText}}
-</button>
+{{#if displayButton}}
+  <button class="btn-show-more" {{on "click" this.toggleExpanded}}>
+    {{displayText}}
+  </button>
+{{/if}}
