feat(anchors): update color using the base.scss file
re-import the foundation base.scss file with different colours in order to update the rules by
default and follow dsign colours (red for links). check file at
https://github.com/discourse/discourse/blob/675bf941336d408ed0dc857952e0d9ab935901dd/app/assets/stylesheets/common/foundation/base.scss

--- a/common/common.scss
+++ b/common/common.scss
@@ -18,3 +18,13 @@
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
+
+// Re-apply foundation styles with different variables to overwrite rules
+
+// https://github.com/discourse/discourse/blob/master/app/assets/stylesheets/common/foundation/base.scss
+$tertiary: $red;
+$primary: $body-color;
+$secondary: $body-bg;
+$base-font-family: $font-family-sans-serif;
+$base-font-size: $font-size-base;
+@import "common/foundation/base";
