feat(topic): embed title within first post card
there are several limitations by the current discourse architecture to render a topic, the first
basic thing to understand is the hirerchy to render posts, which goes like topic >
scrolling-post-stream > post-stream > post from which the last two are widgets and makes even harder
to isolate the customisation into blocks. The final decision was to move the already topic-title
code using JQuery to within the first post by using the pluginAPI

re https://github.com/debtcollective/community/issues/30

--- a/common/common.scss
+++ b/common/common.scss
@@ -15,9 +15,12 @@
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
 @import "templates/components/dc-show-more";
+@import "templates/topic";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
+
+@import "widgets/post";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
