feat(topic-timeline): add button customisation material like
re https://github.com/debtcollective/community/issues/30

--- a/common/common.scss
+++ b/common/common.scss
@@ -25,6 +25,7 @@
 @import "widgets/post-controls";
 @import "widgets/embedded-posts";
 @import "widgets/select-kit";
+@import "widgets/topic-timeline";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
