feat(header): add categories nav
re https://github.com/debtcollective/community/issues/27

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,8 @@
 @import "pill";
 @import "utils";
 
+@import "connectors/categories-nav";
+
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
 @import "templates/components/dc-show-more";
