feat(categories-nav): allow to use theme settings
this commit allow admins to set the categories that want to be highligted below the header

re https://github.com/debtcollective/community/issues/27

--- a/javascripts/discourse/connectors/below-site-header/categories-nav.hbs
+++ b/javascripts/discourse/connectors/below-site-header/categories-nav.hbs
@@ -1,24 +1,1 @@
-<div class="dc-categories">
-  <div class="dc-categories-nav-container">
-    <ul class="dc-categories-nav">
-      <li>
-        STUDENT DEBT
-      </li>
-      <li>
-        MEDICAL DEBT
-      </li>
-      <li>
-        CREDIT CARD DEBT
-      </li>
-      <li>
-        AUTO LOANS
-      </li>
-      <li>
-        STUDENT DEBT STRIKE
-      </li>
-      <li>
-        OTHERS
-      </li>
-    </ul>
-  </div>
-</div>
+{{dc-categories-nav}}
