fix(post): avoid title and post info overlap
re https://app.asana.com/0/1156905606552066/1164263463757819

--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -11,9 +11,11 @@
   }
 
   .post-infos {
+    align-items: flex-start;
+    flex-direction: column;
     position: absolute;
-    top: 0;
     right: 0;
+    top: 0;
   }
 
   .regular.contents {
