fix(list-controls): aling buttons and minor aesthetics

--- a/common/common.scss
+++ b/common/common.scss
@@ -18,6 +18,7 @@
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
 @import "templates/components/dc-show-more";
+@import "templates/components/list-controls";
 @import "templates/topic";
 @import "templates/user";
 
