fix(layout): update margins when rendering categories-and-latest

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -12,3 +12,8 @@ body {
 .wrap {
   @extend %custom-container;
 }
+
+// Make sure when rendering categories-and-latest we remove margin since "latest" has been removed
+.categories-and-latest.categories-and-latest .column.categories {
+  margin: 0;
+}
