feat(hero): allow to render a on discovery page

--- a/common/common.scss
+++ b/common/common.scss
@@ -14,6 +14,7 @@
 @import "utils";
 
 @import "connectors/categories-nav";
+@import "connectors/hero";
 
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
