--- a/scss/type.scss
+++ b/scss/type.scss
@@ -6,6 +6,11 @@ body {
   font-size: 2rem;
 }
 
+.dc-display {
+  font-size: 5rem;
+  font-family: $font-family-monospace;
+}
+
 @mixin dc-text-light($size: inherit) {
   font-weight: 300;
   font-size: $size;
@@ -18,6 +23,10 @@ body {
 
 .dc-text-light {
   @include dc-text-light;
+}
+
+.dc-text-primary {
+  color: $primary;
 }
 
 .dc-text-small {
