refactor(hero): align items center vertically

--- a/javascripts/discourse/templates/components/dc-hero.hbs
+++ b/javascripts/discourse/templates/components/dc-hero.hbs
@@ -1,5 +1,5 @@
 <div class="dc-hero">
-  <div class="dc-row">
+  <div class="dc-row align-items-center">
     <div class="dc-col-xl-7">
       <h1 class="dc-hero__heading dc-display">
         Organize to end
