feat(hero): add support for i18n

--- a/javascripts/discourse/templates/components/dc-hero.hbs
+++ b/javascripts/discourse/templates/components/dc-hero.hbs
@@ -2,21 +2,17 @@
   <div class="dc-row align-items-center">
     <div class="dc-col-xl-7">
       <h1 class="dc-hero__heading dc-display">
-        Organize to end
-        <strike class="dc-text-primary">
-          debt
-        </strike>
-        .
+        {{{theme-i18n "dc.hero.heading"}}}
       </h1>
       <p class="dc-hero__subheading">
-        Collectives to organize and take action with the help of our members.
+        {{theme-i18n "dc.hero.subheading"}}
       </p>
       {{! TODO: which are the links to use within the buttons below }}
       <a href="#" class="btn btn-primary btn-lg">
-        Join a Collective
+        {{theme-i18n "dc.hero.cta"}}
       </a>
       <a href="#" class="btn btn-link btn-lg">
-        Learn more
+        {{theme-i18n "dc.hero.cta_option"}}
       </a>
     </div>
     <div class="dc-col d-none d-xl-block text-right">
