--- a/scss/connectors/hero.scss
+++ b/scss/connectors/hero.scss
@@ -11,6 +11,11 @@
     @include media-breakpoint-down(sm) {
       font-size: 11vw;
     }
+
+    strike,
+    span {
+      color: $primary;
+    }
   }
 
   &__subheading {
