feat(hero): render only on categories navigation
due to the inability to feed the code with a way to detect which is the current use homepage and
check on every route change to display or not the hero. This commit will instead rely on an already
built-in feature of Discourse that change classnames based on the current location and we assume the
homepage will be always categories page

re https://app.asana.com/0/1159164196409129/1167522920607909

--- a/scss/connectors/hero.scss
+++ b/scss/connectors/hero.scss
@@ -1,3 +1,15 @@
+body {
+  .dc-hero {
+    display: none;
+  }
+
+  &.navigation-categories {
+    .dc-hero {
+      display: block;
+    }
+  }
+}
+
 .dc-hero {
   margin-top: $spacer * 1.5;
   margin-bottom: $spacer * 3;
