refactor(user-menu): render custom items within a container

--- a/common/common.scss
+++ b/common/common.scss
@@ -34,6 +34,7 @@
 @import "widgets/select-kit";
 @import "widgets/topic-timeline";
 @import "widgets/user-menu";
+@import "widgets/quick-access-panel";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
