style(topic-list-item): format small version

--- a/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
@@ -33,7 +33,10 @@
           </div>
           {{#if topic.pinned}}
             <div id="pinned-topic">
-              <p class="dc-info-pill-sm" style="background-color: #{{topic.category.color}};">
+              <p
+                class="dc-info-pill-sm"
+                style="background-color: #{{topic.category.color}};"
+              >
                 staff post
               </p>
             </div>
