feat(topic): allow to render event details
Ideally, we should render alongside the title, but the fact the posts
on the topic are handle by widgets force us to do customisation with
widgets (dc-topic-title) and we are not able to inject the plugin-outlet
from a widget.

Component and widgets can't live together

--- a/javascripts/discourse/templates/topic.hbs
+++ b/javascripts/discourse/templates/topic.hbs
@@ -17,6 +17,7 @@
           id="topic"
           data-topic-id="{{unbound model.id}}"
         >
+          {{plugin-outlet name="topic-title" args=(hash model=model)}}
           <div class="posts-wrapper">
             {{conditional-loading-spinner
               condition=model.postStream.loadingAbove
