feat(composer): improve aesthetics and event support

--- a/common/common.scss
+++ b/common/common.scss
@@ -22,6 +22,7 @@
 @import "templates/components/list-controls";
 @import "templates/topic";
 @import "templates/user";
+@import "templates/composer";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
