fix(hero): remove one cta item and add customizable link

--- a/javascripts/discourse/templates/components/dc-hero.hbs
+++ b/javascripts/discourse/templates/components/dc-hero.hbs
@@ -7,12 +7,8 @@
       <p class="dc-hero__subheading">
         {{theme-i18n "dc.hero.subheading"}}
       </p>
-      {{! TODO: which are the links to use within the buttons below }}
-      <a href="#" class="btn btn-primary btn-lg">
+      <a href={{theme-i18n "dc.hero.cta_link"}} class="btn btn-primary btn-lg">
         {{theme-i18n "dc.hero.cta"}}
-      </a>
-      <a href="#" class="btn btn-link btn-lg">
-        {{theme-i18n "dc.hero.cta_option"}}
       </a>
     </div>
     <div class="dc-col d-none d-xl-block text-right">
