chore: make login modal appear to be full screen

--- a/common/common.scss
+++ b/common/common.scss
@@ -39,8 +39,9 @@
 @import "widgets/topic-timeline";
 @import "widgets/user-menu";
 
-// Re-apply foundation styles with different variables to overwrite rules
+@import "login";
 
+// Re-apply foundation styles with different variables to overwrite rules
 // https://github.com/discourse/discourse/blob/master/app/assets/stylesheets/common/foundation/base.scss
 $tertiary: $red;
 $primary: $body-color;
