--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,6 +9,10 @@ $red: #ff4630;
 $yellow: #ffed9c;
 $white: #ffffff;
 
+// Shared
+$background-gradient: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
+$card-box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
+
 // Theme
 $font-family-sans-serif: "Libre Franklin", sans-serif;
 $font-family-monospace: "More Gothic Bold", Impact, sans-serif;
