--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,6 +1,6 @@
 .dc-card {
   background: $beige;
-  box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
+  box-shadow: $card-box-shadow;
   border-top: 0.25rem solid transparent;
   display: flex;
   height: $card-height;
